# ai-agent-review

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
__.github/workflows/: deploy-cloudrun.yml  deploy-preview.yml  deploy.yml
app/: app.py  streamlit_app.py
app/src/: memory_module.py  planner.py
app/src/providers/: __init__.py  provider_gemini.py  provider_openai.py
docker/: Dockerfile
docs/: quickstart.md
src/: agent_builder.py
tests/: __init__.py
